Fix pencil image in photoshop, align content directly, not on entire section

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -20,8 +20,13 @@ nav {
   width: 25%;
   float: right;
   margin: 1em;
-}
-
-#content {
   display: inline-block;
 }
+
+#add {
+  display: inline-block;
+  float: left;
+  margin: 1em;
+  text-align: center;
+}
+
